* Added scenes for Ophelia:
 - Talk (multiple topics), written by QB and LD.
 - Sex - vaginal fuck, written by QB and LD.
* Fixed a bug in the sermon spell.
* Restructured the save format a bit to account for stretch/capacity on some NPCs. This may have some side effects, such as Terry's body resetting the first time you load an old save.
* New Miranda scene:
 - Dommy Miranda, have her ride you.

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.3u
------------
* Fixed a bug in mothgirl, the "first meeting" flag was flipped the wrong way.
* Fixed a bug in Roa, where it was possible to lock yourself out of getting the scepter.
* Fixed a bug when fighting named mobs that later join you (Terry, mainly).
* Restructuring of Equip GUI. More to come.
* New scenes for the lizards, written by me:
 - A new loss scene for the female.
 - A new win scene for the female.
* Quest items are now correctly removed when turning in the Burrows quests.
* Restructured the end of combat so the Defeat/Win screen with exp and loot always shows up first. Report if there are fights that don't behave this way (or are suddenly acting odd).
* Restructured how capacity and stretch works. Still pending some balance. The values have been set on a different scale, and scenes lockouts should now only be based on cock thickness (not length). There may still be some weirdness. Saves have been tweaked for player, kiakai and rosalin.
* Added mastery skills for all the implemented jobs. These are only unlocked after you reach master level.
* Rebalanced Bruiser (skills, bonuses). It's now more of a strength based job, rather than a tanky one. Provoke has been moved to Fighter.
* Added an HP/SP/Lust bonus when mastering some jobs. If you have already mastered the jobs; sorry, you won't be able to get this.
* Bandits on the kings road are a bit tougher now, sometimes.
* Added new scenes for Cveta by The Observer: